[gd_scene load_steps=8 format=3 uid="uid://bx31lj57yngwh"]

[ext_resource type="Script" path="res://Scripts/enemigo_01.gd" id="1_t8kxr"]
[ext_resource type="Texture2D" uid="uid://cfel6qyvn70hq" path="res://assets/Sprite bacteria.png" id="2_wn20y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ewyna"]
radius = 53.0

[sub_resource type="Animation" id="Animation_o1ewo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xc3m6"]
resource_name = "new_animation"
length = 0.4
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(1, 145, 634, 554), Rect2(664, 88, 583, 609), Rect2(1306, 2, 574, 697), Rect2(1945, 80, 595, 617)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2d6c"]
_data = {
"RESET": SubResource("Animation_o1ewo"),
"new_animation": SubResource("Animation_xc3m6")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f0l7f"]
radius = 57.0
height = 148.0

[node name="Enemigo1" type="CharacterBody2D" groups=["Enemigo"]]
z_index = 2
collision_layer = 2
collision_mask = 2
script = ExtResource("1_t8kxr")
speed = 80.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.319512, 0.234694)
texture = ExtResource("2_wn20y")
region_enabled = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(1e-05, 1e-05)
rect = Rect2(0, 0, 20, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 17)
shape = SubResource("CircleShape2D_ewyna")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w2d6c")
}
autoplay = "new_animation"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f0l7f")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
